@@ -1,7 +1,8 @@
 *** WooCommerce Shipping & Tax Changelog ***
 
 = 1.25.19 - 2021-xx-xx =
-* Fix   - Country drop down list no longer showing currency name.
+* Add - Notice about tax nexus in settings.
+* Fix - Country drop down list no longer showing currency name.
 
 = 1.25.18 - 2021-08-16 =
 * Add   - Added "Automated Taxes" health item on status page.
